[ACPI] check "maxcpus=N" early -- same as NR_CPUS check. http://bugzilla.kernel.org/show_bug.cgi?id=2317

When the BIOS enumerates physical processors before logical,
maxcpus=N/2 will now effectively disable HT.

This can be verified by boot messages warning that HT is off:
eg. "maxcpus=2" on a 2xHT system:

Total of 2 processors activated (11141.12 BogoMIPS).
WARNING: No sibling found for CPU 0.
WARNING: No sibling found for CPU 1.